# karabelaTrade2

./: .gitignore  .pylintrc  BUILD.md  DOCKER.md  DOCKER_MAINTENANCE.md  Dockerfile  KarabelaTrade.spec  LICENSE  MANIFEST.in  POSITION_DETECTION_FIX.md  QUICKSTART.md  README.md  TESTING.md  VERSION.md  adx_filter_guide.md  backtest.py  backtesting_guide.md  build_executable.py  build_installer.ps1  build_package.bat  build_package.sh  build_steps.ps1  candlestick_patterns.py  chart_display.py  check_docker.py  cleanup_docker.bat  cleanup_docker.sh  config.py  configure_docker.bat  configure_docker.py  configure_docker.sh  debug_positions.py  deployment_guide.txt  discord_notify.py  docker-compose.yml  docker_cleanup.py  docker_deploy.bat  docker_deploy.sh  docker_manage.py  enhanced_position_detection.py  (+54 more)
MQL5/: KarabelaTrade.mq5
backtest_results/: EURUSD_M5_20240419_20250419.json  EURUSD_M5_20240419_20250419_trades.csv  EURUSD_M5_20250119_20250419.json  EURUSD_M5_20250404_20250419.json  EURUSD_M5_20250404_20250419_trades.csv  EURUSD_M5_best_parameters.json
logs/: trade_log.txt
tests/: run_tests.py  test_template.py
